kubernetes/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hazliconnect
    maintainer: xtorrent
    sla: low
    team: SRE
  name: hazliconnect
  namespace: test
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hazliconnect
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hazliconnect
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: KUBERNETES_NODE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        image: sendotux/hazliconnect:latest
        imagePullPolicy: Always
        name: hazliconnect
        ports:
        - containerPort: 5000
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hazliconnect
  name: hazliconnect
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: hazliconnect

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hazliconnect
spec:
  rules:
  - host: hazliconnect-test.home.sendotux.net
    http:
      paths:
      - backend:
          serviceName: hazliconnect
          servicePort: 80
        path: /
